# NickTags

./: README.md  pyproject.toml  requirements.txt
nicktags/: __main__.py  bot.py  constants.py
nicktags/cogs/: admin.py  update.py
nicktags/database/: __init__.py
